etc/sysconfig/iptables
# Generated by iptables-save v1.4.21 on Sat Aug  1 08:46:37 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [9:1448]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5900 -j ACCEPT
-A INPUT -i eno33559296 -p udp -m udp --sport 1024:65534 --dport 53 -j ACCEPT
-A INPUT -i eno33559296 -p tcp -m tcp --sport 1024:65534 --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 1024:65534 --dport 21 -j ACCEPT
-A INPUT -p udp -m udp --sport 1024:65534 --dport 21 -j ACCEPT
-A FORWARD -i eno33559296 -j ACCEPT
-A FORWARD -o eno33559296 -j ACCEPT
-A INPUT -s 224.0.0.0/4 -j ACCEPT
-A INPUT -d 224.0.0.0/4 -j ACCEPT
-A INPUT -s 240.0.0.0/5 -j ACCEPT
-A INPUT -m pkttype --pkt-type multicast -j ACCEPT
-A INPUT -m pkttype --pkt-type broadcast -j ACCEPT
COMMIT
# Completed on Sat Aug  1 08:46:37 2015
# Generated by iptables-save v1.4.21 on Sat Aug  1 08:46:37 2015
*nat
:PREROUTING ACCEPT [5:653]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eno16780032 -j MASQUERADE
COMMIT
